<resources>
    <string name="app_name">FloatText</string>
    <string name="done">确认</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="others">其它</string>
    <string name="importfile">导入</string>
    <string name="exit">退出</string>
    <string name="show">显示</string>
    <string name="noshow">不显示</string>
    <string name="day">日</string>
    <string name="hour">小时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
	<string name="on">开启</string>
	<string name="off">关闭</string>
	<string name="status">当前状态:</string>
    <string name="copy_ok">复制成功！</string>
    <string name="premission_ask_failed">权限申请失败，请重启应用重试！</string>
    <string name="ask_for_premission">请求权限通知</string>
    <string name="ask_for_premission_alert">本应用需要悬浮窗权限才能运行！\n\n由于安卓碎片化严重，所以请深度定制的手机手动在系统里打开本应用的悬浮窗权限!\n\n不授予权限可能会导致不可预知的错误！</string>
    <string name="ask_for_premisdion_msg">本应用需要悬浮窗权限才可以运行！\n\n点击确认授予权限</string>
	<string name="no_premission">未授予悬浮窗权限!</string>
	<string name="get_premission">授予权限</string>
    <string name="ask_for_delete">删除悬浮窗提示</string>
    <string name="ask_for_delete_alert">是否要删除该悬浮窗？</string>
    <string name="reshow_msg">\n\n检测到存在保存的悬浮窗数据，需要恢复显示！\n\n不授予权限将退出应用</string>
    <string name="exit_title">再按一次退出</string>
    <string name="back_to_launcher">仅返回桌面</string>
    <string name="default_text">悬浮窗文字</string>
    <string name="restart_to_apply">重启应用以应用更改！</string>
    <string name="text_error">该值不能为空！</string>
    <string name="text_size_set">文字大小设置</string>
    <string name="text_speed_set">跑马灯速度设置</string>
    <string name="text_move_on_sum">效果开启(可以调节速度)</string>
    <string name="float_edit_title">文本悬浮窗编辑</string>
    <string name="float_edit_web_title">Web悬浮窗编辑</string>
    <string name="text_edit_front">文字编辑:</string>
    <string name="edit_text_show">是否显示本文字悬浮窗</string>
    <string name="text_size_now">当前大小</string>
    <string name="text_speed_now">当前速度</string>
    <string name="delete_text_ok">删除成功</string>
    <string name="save_text_ok">保存成功</string>
    <string name="exit_text_add">是否要退出编辑？</string>
    <string name="exit_text_add_alert">退出编辑将不会保存和显示已经修改的悬浮窗！</string>
    <string name="text_lock">锁定成功</string>
    <string name="text_unlock">解锁成功</string>
    <string name="text_edit_color_transparency">调整颜色透明度</string>
    <string name="text_edit_color_transparency_now">当前透明度:</string>
    <string name="add_text">点击+按钮，新建悬浮窗</string>
    <string name="add_button_title">新建悬浮窗</string>
    <string name="text_add_title">新建文本悬浮窗</string>
    <string name="web_add_title">新建Web悬浮窗</string>
    <string name="ttf_import_title">导入ttf字体文件</string>
    <string name="ttf_import_success">字体导入成功！</string>
    <string name="ttf_import_failed">字体导入失败！</string>
    <string name="ttf_import_exist">该名称的字体文件已经存在！</string>
    <string name="about">关于应用</string>
    <string name="settings">全局设置</string>
    <string name="license">开源协议</string>
	<string name="license_sum">所有代码使用的开源协议</string>
    <string name="float_move_title">悬浮窗口位置微调</string>
    <string name="choose_float_type">创建悬浮窗类型</string>
    <string name="dynamic_list_title">可用动态变量列表(点击复制)</string>
    <string name="dynamic_num_tip">注：\n1.创建悬浮窗后必须保存一次才可以应用动态变量！\n2.HTML模式下可使用#代替&lt;与&gt;符号\n3.(*)符号说明必须在全局设置中开启辅助服务才能使用该变量</string>
    <string name="dynamic_date_err">日期倒计时格式设置错误！</string>
    <string name="dynamic_date_reach">计时结束</string>
	<string name="dynamic_date_notstart">计时未开始</string>
    <string name="import_txt">导入文本</string>
    <string name="export_txt">导出文本</string>
	<string name="advancetext_service_label">FloatText高级服务</string>
	<string name="floatnotification_service_label">FloatText通知监听服务</string>
    <string name="xml_about_indexurl">官网首页</string>
    <string name="xml_about_thanklist">感谢名单</string>
    <string name="xml_about_thanklist_sum">在此列出名单感谢所有对本应用有所帮助的人</string>
    <string name="xml_about_feedback">交流反馈</string>
    <string name="xml_about_author">关于作者</string>
	<string name="xml_about_donate">捐赠</string>
	<string name="xml_about_donate_sum">如果你觉得这款软件不错，就去捐赠一下吧！</string>
    <string name="xml_about_version">版本号</string>
	<string name="xml_about_update">更新设置</string>
	<string name="xml_about_update_checknow">手动检测更新</string>
	<string name="xml_about_update_autocheck">自动检测更新</string>
	<string name="xml_about_update_autocheck_sum">每次启动应用时自动检测更新</string>
    <string name="xml_set_tip">小提示</string>
    <string name="xml_set_defaulttip">请将本应用在后台锁定防止被清除!</string>
    <string name="xml_set_globalset">通用设置</string>
    <string name="xml_set_floatshow">显示悬浮窗</string>
    <string name="xml_set_textset">文字设置</string>
    <string name="xml_set_textedit">显示文字</string>
    <string name="xml_set_textedit_sum">更改当前显示的文字</string>
    <string name="xml_set_textsize">文字大小</string>
    <string name="xml_set_textsize_sum">调整当前显示的文字大小</string>
    <string name="xml_set_thick">文字粗体显示</string>
    <string name="xml_set_color">文字颜色设置</string>
    <string name="xml_set_color_sum">让文字显示不同的颜色</string>
    <string name="xml_set_effectset">效果设置</string>
    <string name="xml_set_text_shadow">文字阴影设置</string>
    <string name="xml_set_text_shadow_sum">设置悬浮窗文字的阴影</string>
    <string name="xml_set_text_shadow_use">使用文字阴影</string>
    <string name="xml_set_text_shadow_dx">水平偏移量:</string>
    <string name="xml_set_text_shadow_dy">垂直偏移量:</string>
    <string name="xml_set_text_shadow_radius">阴影扩散度:</string>
    <string name="xml_set_text_shadow_color">阴影颜色设置</string>
    <string name="xml_set_text_shadow_color_sum">让阴影显示不同的颜色</string>
    <string name="xml_set_textmove">文字跑马灯效果</string>
    <string name="xml_set_textmove_on">(与动态变量不兼容)\n效果开启(仅在文字较多时有效果)</string>
    <string name="xml_set_textmove_off">(与动态变量不兼容)\n效果关闭</string>
    <string name="xml_set_textmove_speed">文字跑马灯速度</string>
    <string name="xml_set_textmove_speed_sum">调整跑马灯显示的速度</string>
    <string name="xml_set_win">窗口设置</string>
	<string name="xml_set_win_notifycontrol">允许全局更改控制此悬浮窗</string>
	<string name="xml_set_win_notifycontrol_sum">如通知栏控制功能等</string>
    <string name="xml_set_win_color">窗口背景颜色设置</string>
    <string name="xml_set_win_color_sum">让窗口背景显示不同的颜色</string>
	<string name="xml_set_win_size">窗口大小调整</string>
	<string name="xml_set_win_size_sum_on">手动调整窗口大小</string>
	<string name="xml_set_win_size_sum_off">自动调整窗口大小</string>
	<string name="xml_set_win_long">窗口高度</string>
	<string name="xml_set_win_wide">窗口宽度</string>
	<string name="xml_set_win_long_sum">手动设置窗口高度(X)</string>
	<string name="xml_set_win_wide_sum">手动设置窗口宽度(Y)</string>
    <string name="xml_set_top">悬浮窗可以移到通知栏上</string>
    <string name="xml_set_top_on">可移至通知栏上</string>
    <string name="xml_set_top_off">不可移到通知栏上</string>
    <string name="xml_set_autotop">悬浮窗自动吸顶</string>
    <string name="xml_set_autotop_on">自动吸顶</string>
    <string name="xml_set_autotop_off">不自动吸顶</string>
    <string name="xml_set_move">窗口位置微调</string>
    <string name="xml_set_move_sum">微调窗口的显示位置</string>
    <string name="xml_set_dynamiclist">动态变量列表</string>
    <string name="xml_web_defaulttip_sum">Web悬浮窗联网失败时，多刷新就好了</string>
    <string name="xml_web_defaulttip">本功能仅供测试</string>
	<string name="xml_web_usetip">使用注意事项</string>
	<string name="xml_web_usetip_sum">Web悬浮窗最小化后才能正常使用返回键和编辑功能！</string>
    <string name="xml_web_webset">Web设置</string>
	<string name="xml_web_fileload">加载本地文件</string>
    <string name="xml_web_fileload_sum">加载本地的图片或者文字文件到Web悬浮窗中</string>
    <string name="xml_web_reload">刷新Web悬浮窗</string>
    <string name="xml_web_reload_sum">第一次加载时，遇到网络连接失败可以尝试</string>
    <string name="xml_web_win_width">窗口宽度</string>
    <string name="xml_web_win_width_sum">更改当前窗口的宽度</string>
    <string name="xml_web_win_height">窗口高度</string>
    <string name="xml_web_win_height_sum">更改当前窗口的高度</string>
	<string name="xml_global_notify">通知设置</string>
	<string name="xml_global_notify_manage">通知栏管理悬浮窗</string>
	<string name="xml_global_notify_manage_sum">通知栏对悬浮窗进行管理\n需要开启进程守护服务</string>
	<string name="xml_global_notify_iconshow">通知栏管理显示图标</string>
	<string name="xml_global_system">系统设置</string>
	<string name="xml_global_system_boot">开机时自动启动悬浮窗</string>
	<string name="xml_global_system_boot_sum">请在系统管理中允许本软件开机自启\n注：服务启动可能会比较缓慢</string>
    <string name="xml_global_manageset">管理界面设置</string>
    <string name="xml_global_deletealert">删除悬浮窗时弹出提示</string>
    <string name="xml_global_deletealert_on">弹出提示</string>
    <string name="xml_global_deletealert_off">不弹出提示</string>
    <string name="xml_global_hideline">管理列表显示单行文字</string>
    <string name="xml_global_hideline_on">显示单行文字</string>
    <string name="xml_global_hideline_off">显示所有文字</string>
    <string name="xml_global_win">悬浮窗口设置</string>
    <string name="xml_global_win_longclicklock">长按悬浮窗锁定</string>
    <string name="xml_global_win_longclicklock_on">长按悬浮窗可以锁定其位置</string>
    <string name="xml_global_win_longclicklock_off">长按悬浮窗不会锁定其位置</string>
	<string name="xml_global_win_filter_switch">悬浮窗显示过滤</string>
	<string name="xml_global_win_filter_mode">仅在选中的应用显示悬浮窗(默认不显示)</string>
	<string name="xml_global_win_filter">悬浮窗显示过滤列表</string>
    <string name="xml_global_win_filter_sum">自动在指定的应用不显示悬浮窗\n会和手动设定产生冲突\n需要开启FloatText高级服务</string>
    <string name="xml_global_text_type">跑马灯显示模式</string>
    <string name="xml_global_text_common">传统模式\n(速度恒定但是更加稳定)</string>
    <string name="xml_global_text_advanced">高级模式\n(可以设置速度但对硬件要求高)</string>
    <string name="xml_global_text">文字全局设置</string>
    <string name="xml_global_text_typeface">字体设置</string>
    <string name="xml_global_text_typeface_summary">把ttf字体文件放入/FloatText/TTFs文件夹内即可读取\n当前字体:</string>
	<string name="xml_global_text_clear_text">自动清空输入框</string>
	<string name="xml_global_text_clear_text_sum">每次修改悬浮窗时自动清空输入框内文字</string>
	<string name="xml_global_text_filter">文字显示筛选器</string>
	<string name="xml_global_text_filter_sum">在不同的动态变量下显示不同的文字</string>
	<string name="xml_global_text_filter_help">文字显示筛选器帮助文档</string>
    <string name="xml_global_serviceset">服务设置</string>
    <string name="xml_global_service_stayalive">悬浮窗进程守护服务</string>
    <string name="xml_global_service_stayalive_on">开启(后台服务可能增加耗电并导致卡顿)</string>
    <string name="xml_global_service_stayalive_off">关闭(悬浮窗进程可能会被系统关闭)</string>
    <string name="xml_global_service_dynamicnum">动态变量服务</string>
    <string name="xml_global_service_dynamicnum_on">开启(后台服务可能增加耗电并导致卡顿)</string>
    <string name="xml_global_service_dynamicnum_off">关闭(动态变量将不可用)</string>
	<string name="xml_global_service_advancetext_sum">高级动态变量失效时请重新开启辅助服务\n注：部分系统有时会自动关闭辅助服务</string>
	<string name="xml_global_service_notificationtext_sum">在安卓4.3及以上的设备上必须开启本服务以使用通知变量</string>
	<string name="xml_global_service_dynamicaddon">自定义动态变量帮助文档</string>
    <string name="xml_global_advanced">高级功能</string>
    <string name="xml_global_htmlmode">文字支持HTML代码</string>
    <string name="xml_global_htmlmode_on">输入的文字使用#[HTML]开头可以用HTML代码</string>
    <string name="xml_global_htmlmode_off">无法使用HTML代码修改文字样式</string>
    <string name="xml_global_devlopmode">实验性功能</string>
    <string name="xml_global_devlopmode_on">会显示测试中的功能</string>
    <string name="xml_global_devlopmode_off">不会显示测试中的功能</string>
    <string name="xml_global_language">语言设置</string>
    <string name="xml_global_language_sum">当前语言:</string>
	<string name="xml_global_data_title">数据备份与恢复</string>
	<string name="xml_global_data_backup">数据备份</string>
	<string name="xml_global_data_backup_sum">备份当前所有悬浮窗数据到储存卡</string>
	<string name="xml_global_data_recover">数据恢复</string>
	<string name="xml_global_data_recover_sum">从备份文件中恢复悬浮窗数据</string>
	<string name="xml_global_dynamicword_reload_time">动态变量刷新时间</string>
	<string name="xml_global_dynamicword_reload_time_sum">默认为1000毫秒，最低500毫秒，不建议调整！</string>
    <string name="crashreport_ask_for_report">很抱歉，应用程序已经停止运行\n为了能够更好的体验本应用，请填写导致错误的原因\n发送错误报告给我们,我们将会尽快修复</string>
    <string name="crashreport_err_report">错误报告:</string>
    <string name="crashreport_send_report">发送错误报告</string>
    <string name="crashreport_nosend_report">不了</string>
</resources>