<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/xml_set_tip">
        <Preference
            android:key="tips"
            android:summary=""
            android:title="@string/xml_set_defaulttip" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/xml_set_globalset">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="FloatShow"
            android:summaryOff="@string/noshow"
            android:summaryOn="@string/show"
            android:title="@string/xml_set_floatshow" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="NotifyControl"
            android:summary="@string/xml_set_win_notifycontrol_sum"
            android:title="@string/xml_set_win_notifycontrol" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/xml_set_textset">
        <Preference
            android:dependency="FloatShow"
            android:key="TextShow"
            android:summary="@string/xml_set_textedit_sum"
            android:title="@string/xml_set_textedit" />
        <Preference
            android:dependency="FloatShow"
            android:key="TextSize"
            android:summary="@string/xml_set_textsize_sum"
            android:title="@string/xml_set_textsize" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="FloatShow"
            android:key="TextThick"
            android:summaryOff="@string/noshow"
            android:summaryOn="@string/show"
            android:title="@string/xml_set_thick" />
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:defaultValue="0xffff0fff"
            android:dependency="FloatShow"
            android:key="ColorPicker"
            android:summary="@string/xml_set_color_sum"
            android:title="@string/xml_set_color" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/xml_set_effectset">
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="FloatShow"
            android:key="TextMove"
            android:summaryOff="@string/xml_set_textmove_off"
            android:summaryOn="@string/xml_set_textmove_on"
            android:title="@string/xml_set_textmove" />
        <Preference
            android:dependency="TextMove"
            android:enabled="true"
            android:key="TextSpeed"
            android:summary="@string/xml_set_textmove_speed_sum"
            android:title="@string/xml_set_textmove_speed" />
        <Preference
            android:dependency="FloatShow"
            android:key="TextShadow"
            android:summary="@string/xml_set_text_shadow_sum"
            android:title="@string/xml_set_text_shadow" />
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:defaultValue="0x99000000"
            android:dependency="FloatShow"
            android:key="TextShadowColor"
            android:summary="@string/xml_set_text_shadow_color_sum"
            android:title="@string/xml_set_text_shadow_color" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/xml_set_win">
        <Preference
            android:dependency="FloatShow"
            android:key="FloatMove"
            android:summary="@string/xml_set_move_sum"
            android:title="@string/xml_set_move" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="FloatShow"
            android:key="FloatSize"
            android:summaryOff="@string/xml_set_win_size_sum_off"
            android:summaryOn="@string/xml_set_win_size_sum_on"
            android:title="@string/xml_set_win_size" />
        <Preference
            android:dependency="FloatSize"
            android:key="FloatWide"
            android:summary="@string/xml_set_win_wide_sum"
            android:title="@string/xml_set_win_wide" />
        <Preference
            android:dependency="FloatSize"
            android:key="FloatLong"
            android:summary="@string/xml_set_win_long_sum"
            android:title="@string/xml_set_win_long" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="FloatShow"
            android:key="TextTop"
            android:summaryOff="@string/xml_set_top_off"
            android:summaryOn="@string/xml_set_top_on"
            android:title="@string/xml_set_top" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="TextTop"
            android:key="TextAutoTop"
            android:summaryOff="@string/xml_set_autotop_off"
            android:summaryOn="@string/xml_set_autotop_on"
            android:title="@string/xml_set_autotop" />
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:defaultValue="0x00ffffff"
            android:dependency="FloatShow"
            android:key="BackgroundColor"
            android:summary="@string/xml_set_win_color_sum"
            android:title="@string/xml_set_win_color" />
    </PreferenceCategory>
</PreferenceScreen> 
