<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/xml_set_tip">
        <Preference
            android:key="tips"
            android:summary="@string/xml_web_defaulttip_sum"
            android:title="@string/xml_web_defaulttip" />
        <Preference
            android:summary="@string/xml_web_usetip_sum"
            android:title="@string/xml_web_usetip" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/xml_web_webset">
        <Preference
            android:key="WebFileLoad"
            android:summary="@string/xml_web_fileload_sum"
            android:title="@string/xml_web_fileload" />
        <Preference
            android:key="WebReload"
            android:summary="@string/xml_web_reload_sum"
            android:title="@string/xml_web_reload" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/xml_set_win">
        <Preference
            android:key="WebWidth"
            android:summary="@string/xml_web_win_width_sum"
            android:title="@string/xml_web_win_width" />
        <Preference
            android:key="WebHeight"
            android:summary="@string/xml_web_win_height_sum"
            android:title="@string/xml_web_win_height" />
    </PreferenceCategory>
</PreferenceScreen>
