<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/drawer_g1">
		<item
			android:id="@+id/menu_import"
			android:icon="@drawable/ic_import"
			android:title="@string/import_txt"/>
		<item
			android:id="@+id/menu_export"
			android:icon="@drawable/ic_export"
			android:title="@string/export_txt"/>
	</group>
	<group android:id="@+id/drawer_g2">
		<item
			android:id="@+id/menu_wordlist"
			android:icon="@drawable/ic_document"
			android:title="@string/xml_set_dynamiclist"/>
		<item
			android:id="@+id/menu_set"
			android:icon="@drawable/ic_cog"
			android:title="@string/settings"/>
		<item
			android:id="@+id/menu_about"
			android:icon="@drawable/ic_information_outline"
			android:title="@string/about"/>
	</group>
	<group android:id="@+id/drawer_g3">
		<item
			android:id="@+id/menu_back"
			android:icon="@drawable/ic_exit_to_app"
			android:title="@string/back_to_launcher"/>
		<item
			android:id="@+id/menu_exit"
			android:icon="@drawable/ic_close_circle_outline"
			android:title="@string/exit"/>
	</group>
</menu>

